--- a/faraway/frontend/src/index.css
+++ b/faraway/frontend/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import '@fortawesome/fontawesome-free/css/all.min.css';
 
 /* Y'all can put customized colors or font  here */
 @theme{
